Add validation of MoneyLimit user input.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="limit_string">Межа витрат:</string>
     <string name="money_limit_string">Скільки у Вас коштів з собою?</string>
     <string name="OK_button_string">OK</string>
+    <string name="ErrorMoneyLimitValue">Введіть скільки у Вас коштів з собою.</string>
 </resources>
